--- a/app/partials/work.html
+++ b/app/partials/work.html
@@ -1,38 +1,14 @@
-<div>
-    <div class="row" style="margin: 0" id="header">
-        <nav id="nav" class="navbar navbar-inverse" style="  padding: 15px; position: fixed; width:100%;  z-index: 50;  transition: background-color, 0.5s;">
-            <div class="container" style="  max-width: 1040px;  margin-left: auto;  margin-right: auto;">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#home" style="color: white;">Brand</a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav" style="  float: right !important;">
-                        <li><a href="#work" class="link"><span class="links">work</span></a></li>
-                        <li><a href="#" class="link"><span class="links">services</span></a></li>
-                        <li><a href="#about" class="link"><span class="links">about us</span></a></li>
-                        <li><a href="#" class="link"><span class="links">contact us</span></a></li>
-                        <li><a href="#blog" class="link"><span class="links">blog</span></a></li>
-                        <!--<li><a href="#" class="h_button" id="button" style="margin: 0px 20px 0;">Link</a></li>-->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="row" style="margin: 0">
+
+    <div class="row margin_zero">
         <div class="container" style="padding-top: 45px; padding-bottom: 45px">
             <div class="col-md-12 col-xs-12 col-sm-12" style="  text-align: center;">
                 <span style="font-size: 18px;"><a href="#projects" style="  color: #888888 !important;text-decoration: none !important;">Projects</a><span style="  padding-left: 10px; padding-right: 10px;">|</span></span>
                 <span style="font-size: 18px"><a href="#opensource" style="  color: #888888 !important;text-decoration: none !important;"> Open Source</a><span style="  padding-left: 10px; padding-right: 10px;">|</span></span>
                 <span style="font-size: 18px;"><a href="#clients" style="  color: #888888 !important;text-decoration: none !important;">Clients</a></span>
             </div>
+        </div>
     </div>
-    <div class="row" style="background: #f6f6f6;margin: 0" id="projects">
+    <div class="row margin_zero" style="background: #f6f6f6;" id="projects">
         <div class="container sub-cont">
             <div class="row">
                 <div id="SuperMedWeb" class="col-md-4 col-xs-12 col-sm-12">
@@ -103,7 +79,7 @@
             </div>
         </div>
     </div>
-     <div class="row" id="opensource">
+     <div class="row margin_zero" id="opensource">
         <div class="container sub-cont">
             <div class="text" style="padding-bottom: 0">
                 <h2>Open source</h2>
@@ -145,7 +121,7 @@
             </div>
         </div>
      </div>
-        <div class="row" id="clients" style="background: #f6f6f6;margin: 0;text-align: center">
+        <div class="row margin_zero" id="clients" style="background: #f6f6f6;margin: 0;text-align: center">
             <div class="container sub-cont">
                 <div class="text" style="  padding-bottom: 0;">
                     <h2>Client</h2>
@@ -178,7 +154,7 @@
                 </div>
             </div>
         </div>
-    <div class="row" style="margin: 0">
+    <div class="row margin_zero">
         <div class="container sub-cont">
             <div class="text">
                 <h2> Need our help?</h2>
@@ -186,9 +162,6 @@
             <div style="text-align: center;">
                 <button type="button" class="btn btn-info" style="  padding: 13px 23px;   font-size: 20px;">Get In Job</button>
             </div>
-            <div class="container sub-cont">
-            </div>
         </div>
     </div>
-</div>
-</div>
+
