--- a/app/css/app.css
+++ b/app/css/app.css
@@ -39,7 +39,14 @@
   font-size: 20px;
   font-family: initial;
 }
+.sty{
+  border-bottom-style: solid;
+  border-bottom: 2px;
+}
+.sty-none{
+  border-bottom-style: none;
 
+}
 .sub-cont{
   max-width: 1040px;
   margin-left: auto;
@@ -139,6 +146,21 @@
   .nav_float{
     float:none !important;
     text-align: center;
+  }
+  .mouse_hover{
+    text-align: center;
+    background-color: #000000;
+    padding: 40px;
+    position: absolute;
+    left:15px;
+    right:15px;
+    top:0;
+    bottom: 22px;
+    padding-top: 13%;
+    opacity:0.8;
+    -webkit-transition: opacity, 0.5s;
+    -moz-transition: opacity, 0.5s;
+    transition: opacity, 0.5s;
   }
 }
 
