--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,42 +1,35 @@
-
 <div>
-    <div class="row" style="margin: 0" id="header">
-        <nav id="nav" class="navbar navbar-inverse" style="  padding: 15px; position: fixed; width:100%;  z-index: 50;  transition: background-color, 0.5s;">
-            <div class="container" style="  max-width: 1040px;  margin-left: auto;  margin-right: auto;">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#home" style="color: white;">Brand</a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav" style="  float: right !important;">
-                        <li><a href="#work" class="link"><span class="links">work</span></a></li>
-                        <li><a href="#" class="link"><span class="links">services</span></a></li>
-                        <li><a href="#about" class="link"><span class="links">about us</span></a></li>
-                        <li><a href="#" class="link"><span class="links">contact us</span></a></li>
-                        <li><a href="#blog" class="link"><span class="links">blog</span></a></li>
-                        <!--<li><a href="#" class="h_button" id="button" style="margin: 0px 20px 0;">Link</a></li>-->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="row" style="margin: 0">
+    <div class="row margin_zero" style="background: #f6f6f6">
         <div class="container sub-cont">
-            <div class="text" style="padding-bottom: 0">
+            <div class="text" style=" padding-bottom: 0">
                 <h2>About us</h2>
                 <p class="format">Nebulab is an Italian agency working with awesome clients from all over the world with transparency and flexibility. We bring together strategy, design and technology to create successful web solutions that help big and small companies to achieve their goals.</p>
             </div>
         </div>
-        <div class="row" style="background: #f6f6f6;margin: 0">
+        <div class="row margin_zero">
             <div class="container sub-cont">
-                <div class="text" style="padding-bottom: 0">
+                <div class="text" style="padding-bottom: 60px">
                     <h2>Our team</h2>
                     <p class="format">We are a small team passionate about the web and the best technologies it offers. You might meet us at various industry conferences around the world.</p>
+                </div>
+                <div class="row" >
+                    <div class="container sub-cont">
+                        <div  class="col-md-4 col-xs-12 col-sm-12">
+                            <div>
+                                <img src="../img/git.png" style="width: 250px; height: 250px;  border-radius: 65%;">
+                            </div>
+                        </div>
+                        <div  class="col-md-4 col-xs-12 col-sm-12" >
+                            <div>
+                                <img src="../img/back.jpg" style="width: 250px; height: 250px;  border-radius: 65%;">
+                            </div>
+                        </div>
+                        <div  class="col-md-4 col-xs-12 col-sm-12" >
+                            <div>
+                                <img src="../img/images.jpg" style="width: 250px; height: 250px;  border-radius: 65%;">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,42 +45,45 @@
             </div>
         </div>
     </div>
-        <div class="row">
-            <div class="container sub-cont">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="  text-align: -webkit-center;">
-                    <ol class="carousel-indicators" style="  bottom: -60px;">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="../img/slide1.jpg" alt="slide1">
-                        </div>
-                        <div class="item">
-                            <img src="../img/slide2.jpg" alt="slider2">
-                        </div>
-                        <div class="item">
-                            <img src="../img/slide3.jpg" alt="slider3">
-                        </div>
-                        <div class="item">
-                            <img src="../img/slide4.jpg" alt="slider4">
-                        </div>
+    <div class="row margin_zero">
+        <div class="container sub-cont">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="  text-align: -webkit-center;">
+                <ol class="carousel-indicators" style="  bottom: -60px;">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="../img/slide1.jpg" alt="slide1">
                     </div>
-                </div>
-            </div>
-            <div class="row" style="margin: 0">
-                <div class="container sub-cont">
-                    <div class="text">
-                        <h2> Need our help?</h2>
+                    <div class="item">
+                        <img src="../img/slide2.jpg" alt="slider2">
                     </div>
-                    <div style="text-align: center;">
-                        <button type="button" class="btn btn-info" style="  padding: 13px 23px;   font-size: 20px;">Get In Job</button>
+                    <div class="item">
+                        <img src="../img/slide3.jpg" alt="slider3">
                     </div>
-                    <div class="container sub-cont">
+                    <div class="item">
+                        <img src="../img/slide4.jpg" alt="slider4">
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row margin_zero">
+            <div class="container sub-cont">
+                <hr>
+            </div>
+        </div>
+        <div class="row margin_zero">
+            <div class="container sub-cont">
+                <div class="text">
+                    <h2> Need our help?</h2>
+                </div>
+                <div style="text-align: center;">
+                    <button type="button" class="btn btn-info" style="  padding: 13px 23px;   font-size: 20px;">Get In Job</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
