--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -48,6 +48,7 @@
                 </p>
             </form>
         </div>
+        <a class="back-to-top" href="" id="backToTop" ></a>
         <div id="overlay" class="loading-overlay close-modal" style="display: none;"></div>
         <div class="notifications" id="notifications" style="display: none;">
             <div class="notification-close close-modal"></div>
