--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -1,122 +1,133 @@
 <div>
-    <div class="submenu-section" style="font-size: 2rem;">
-        <div class="container">
-            <ul>
-                <li><a href="#e-commerce">E-Commerce</a></li>
-                <li><a href="#web-design">Web Design</a></li>
-                <li><a href="#web-development">Web Development</a></li>
-                <li><a href="#online-marketing">Online Marketing</a></li>
-            </ul>
+    <div class="row margin_zero">
+        <div class="container" style="padding-top: 45px; padding-bottom: 45px">
+            <div class="col-md-12 col-xs-12 col-sm-12" style="  text-align: center;">
+                <span style="font-size: 18px;"><a href="#E-Commerce" style="  color: #888888 !important;text-decoration: none !important;">E-Commerce</a><span style="  padding-left: 10px; padding-right: 10px;">|</span></span>
+                <span style="font-size: 18px"><a href="#Web Design" style="  color: #888888 !important;text-decoration: none !important;">Web Design</a><span style="  padding-left: 10px; padding-right: 10px;">|</span></span>
+                <span style="font-size: 18px;"><a href="#Web Development" style="  color: #888888 !important;text-decoration: none !important;">Web Development</a><span style="  padding-left: 10px; padding-right: 10px;">|</span></span>
+                <span style="font-size: 18px;"><a href="#Online Marketing" style="  color: #888888 !important;text-decoration: none !important;">Online Marketing</a></span>
+            </div>
         </div>
     </div>
-    <div class="services-ecommerce-section" id="e-commerce">
-        <div class="container" style="  padding: 100px 20px 75px 20px">
-            <div class="header"> <h2>E-commerce</h2>
+    <div class="row margin_zero"  style="background: #f6f6f6">
+        <div class="container sub-cont">
+            <div class="text">
+                <h2>E-commerce</h2>
                 <p class="format">We are experts in creating custom online stores.
                     From marketing analysis to design, from development to launch and maintenance we take care of the whole process.
-                    Our goal is to satisfy our clients by making their investment profitable.</p>
+                    Our goal is to satisfy our clients by making their investment profitable.
+                </p>
             </div>
-            <div class="mobile-shopping">
-                <span class="svg-icon mobile_shopping-icon"></span>
-                <h4>Mobile shopping</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 17px;">With the continuous increase in the number of mobile devices the optimization of e-commerce websites for such new platforms has become an important requirement.
-                    That’s why we make our on-line stores accessible from smartphones and tablets.</p>
-            </div>
-            <div class="products-migration">
-                <span class="svg-icon products_migration-icon"></span>
-                <h4>Products migration</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 17px;">If you need to switch to another e-commerce platform without losing all your products, we can help you migrate your database. We support platforms such as Magento, PrestaShop, OpenCart and others.</p>
-            </div>
-            <div class="inventory-integration">
-                <span class="svg-icon inventory_integration-icon"></span>
-                <h4>Inventory Integration</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 17px;">Do you have a physical store and want to launch your business on the web? This is the right time.
-                    If you use an Inventory Management software you are already halfway there. We can integrate your software into our e-commerce solution without changing your workflow.</p>
+            <div>
+                <div class="col-md-4 col-xs-12 col-sm-12" style="text-align: center;padding-bottom: 40px">
+                    <div><span class="svg-icon mobile_shopping-icon"></span></div>
+                    <h4 class="thumb_header">Mobile shopping</h4>
+                    <p class="p_text">With the continuous increase in the number of mobile devices the optimization of e-commerce websites for such new platforms has become an important requirement.
+                        That’s why we make our on-line stores accessible from smartphones and tablets.
+                        </p>
+                </div>
+                <div class="col-md-4 col-xs-12 col-sm-12" style="text-align: center;padding-bottom: 40px">
+                    <div><span class="svg-icon products_migration-icon"></span></div>
+                    <h4 class="thumb_header">Products migration</h4>
+                    <p class="p_text">If you need to switch to another e-commerce platform without losing all your products, we can help you migrate your database. We support platforms such as Magento, PrestaShop, OpenCart and others.</p>
+                </div>
+                <div class="col-md-4 col-xs-12 col-sm-12" style="text-align: center;padding-bottom: 40px">
+                    <div><span class="svg-icon inventory_integration-icon"></span></div>
+                    <h4 class="thumb_header">Inventory Integration</h4> <p class="p_text">Do you have a physical store and want to launch your business on the web? This is the right time.
+                        If you use an Inventory Management software you are already halfway there. We can integrate your software into our e-commerce solution without changing your workflow.</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="services-spree-section" id="spree">
-        <div class="container" style="  padding: 100px 20px 75px 20px">
-            <div class="spree-description" style="margin: 11px;font-size: 16px;line-height: 3.5rem;">
+    <div class="row margin_zero" style="background-color: #0099cc; color: #fff;padding-top: 40px;padding-bottom: 40px;">
+        <div class="container sub-cont">
+            <div class="col-md-6 col-xs-12 col-sm-12">
                 <h2>Spree Commerce</h2>
-                <p>For our e-commerces we chose Spree, a 100% open source platform powered by the popular Ruby on Rails framework.
+                <p class="format">For our e-commerces we chose Spree, a 100% open source platform powered by the popular Ruby on Rails framework.
                     We love it because it’s secure, robust and particularly flexible.It allows us to develop great custom features for our clients.
-                    We are a <a href="https://spreecommerce.com/solution_partners" style="text-decoration: underline; color: #000;">Spree Certified Partner</a> and we’ve been contributing to the development of the project and its extensions on GitHub.</p>
+                    We are a <a href="https://spreecommerce.com/solution_partners" style="color: #fff;">Spree Certified Partner</a> and we’ve been contributing to the development of the project and its extensions on GitHub.
+                </p>
             </div>
-            <div class="spree-image"></div>
-        </div>
-    </div>
-    <div class="services-webdesign-section" id="web-design">
-        <div class="container" style="  padding: 100px 20px 75px 20px">
-            <div class="header">
+            <div class="col-md-6 col-xs-12 col-sm-12">
+                <div class="spree-image">
+                </div>
+            </div>
+        </div></div>
+    <div class="services-webdesign-section"  style="padding-top: 40px; padding-bottom: 40px;">
+        <div class="container sub-cont" >
+            <div class="text">
                 <h2>Web Design</h2>
                 <p  class="format">We design beautiful and functional websites and web applications.
                     From a sketch to a wireframe, from a mockup to an interactive experience, our main goal is to quickly deliver your message to your users.</p>
             </div>
-            <div class="uiux-design">
-                <span class="svg-icon ui_ux-icon"></span>
-                <h4>UI/UX Design</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 17px;">We bring projects to life starting from an initial prototype up to a clean and consistent interface.
-                    We work hard to create products that our clients and their users enjoy. </p>
-            </div>
-            <div class="responsive">
-                <span class="svg-icon rwd-icon"></span>
-                <h4>Responsive Web Design</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 17px;">With the increased usage of mobile devices web content must be accessible anywhere and everywhere.
-                    That’s why we make web pages that fit all screen sizes.</p>
-            </div>
-            <div class="branding">
-                <span class="svg-icon branding-icon"></span>
-                <h4>Branding</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 17px;">Along with the new design of your website we can help you build or improve your image in order to communicate the value of your brand in its entirety.</p>
+            <div class="row margin_zero">
+                <div class="container sub-cont">
+                    <div class="col-md-4 col-xs-12 col-sm-12" style="padding-top: 40px;padding-bottom: 40px;text-align: center">
+                        <div><span class="svg-icon ui_ux-icon"></span></div>
+                        <h4 class="thumb_header">UI/UX Design</h4>
+                        <p class="p_text">We bring projects to life starting from an initial prototype up to a clean and consistent interface.
+                            We work hard to create products that our clients and their users enjoy.</p>
+                    </div>
+                    <div class="col-md-4 col-xs-12 col-sm-12" style="padding-top: 40px;padding-bottom: 40px;text-align: center">
+                        <span class="svg-icon rwd-icon"></span>
+                        <h4 class="thumb_header">Responsive Web Design</h4>
+                        <p class="p_text">With the increased usage of mobile devices web content must be accessible anywhere and everywhere.
+                            That’s why we make web pages that fit all screen sizes.</p>
+                    </div>
+                    <div class="col-md-4 col-xs-12 col-sm-12" style="padding-top: 40px;padding-bottom: 40px;text-align: center">
+                        <span class="svg-icon branding-icon"></span>
+                        <h4 class="thumb_header">Branding</h4>
+                        <p class="p_text">Along with the new design of your website we can help you build or improve your image in order to communicate the value of your brand in its entirety.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="services-webdevelopment-section" id="web-development">
-        <div class="container" style="  padding: 100px 20px 75px 20px;">
-            <div class="header">
+    <div class="row margin_zero" id="web-development">
+        <div class="container sub-cont">
+            <div class="text">
                 <h2>Web Development</h2>
                 <p class="format">We create web applications that just work. From deploying an existing open source platform to building a fully custom application,
                     we provide the solution to our clients' need. By using the right tools and a workflow focused on stability,
                     maintainability and performance, we make sure our work always delivers the value it should.</p>
             </div>
-            <div class="cms">
-                <div class="sub-image">
+            <div class="row">
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align">
                     <span class="svg-icon cms-icon"></span>
-                </div> <div class="sub-text" style="text-align: left;">
-                <h4>Content Management System</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">Do you need to edit your web content? We can provide you full control of your website so you can easily manage text, images, videos and multiple languages.
-                    We can also build custom features for your needs.</p>
-            </div>
-            </div>
-            <div class="maintenance">
-                <div class="sub-image">
+                </div>
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
+                    <h4>Content Management System</h4>
+                    <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">Do you need to edit your web content? We can provide you full control of your website so you can easily manage text, images, videos and multiple languages.
+                        We can also build custom features for your needs.</p>
+                </div>
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align" >
                     <span class="svg-icon maintenance-icon"></span>
                 </div>
-                <div class="sub-text" style="text-align: left;">
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
                     <h4>Maintenance</h4>
                     <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">Have a web application or e-commerce which needs some love? We use cloud provisioning technologies to ensure our clients' applications are always healthy, fast and secure.</p>
                 </div>
             </div>
-            <div class="testing">
-                <div class="sub-image">
+            <div class="row">
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align" >
                     <span class="svg-icon testing-icon"></span>
                 </div>
-                <div class="sub-text" style="text-align: left;">
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
                     <h4>Testing</h4>
                     <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We describe project features as a list of automated tests called ‘user stories’ which run at each code change.
                         By doing this we know new features won’t break what has already been done.
                         Additionally, we make sure we fully understand our clients' needs.</p>
-                </div> </div> <div class="ember">
-            <div class="sub-image">
-                <span class="svg-icon ember-icon"></span>
-            </div>
-            <div class="sub-text" style="text-align: left;"> <h4>Ember</h4>
-                <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We provide consultancy for rich client side applications served by server side APIs.
+                </div>
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align">
+                    <span class="svg-icon ember-icon"></span>
+                </div>
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
+                    <h4>Ember</h4>
+                    <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We provide consultancy for rich client side applications served by server side APIs.
                     There are a lot of alternatives right now but we’ve chosen to do it the Ember way.
                     We’ve been working with it from its early stages and we really feel this framework will make the difference.</p>
+                </div>
             </div>
-        </div>
         </div>
     </div>
     <div class="services-ror-section" id="ruby-on-rails">
@@ -131,6 +142,7 @@
             </div>
         </div>
     </div>
+    <a class="back-to-top" href="" id="backToTop" ></a>
     <div class="services-marketing-section" id="online-marketing">
         <div class="container" style="  padding: 100px 20px 75px 20px;">
             <div class="header" style="text-align: center;">
