--- a/app/css/app.css
+++ b/app/css/app.css
@@ -62,6 +62,7 @@
 .p_text{
   font-size: 15px;
   text-align: center;
+  line-height: 30px
 }
 .mouse_on{
   background-color: #000000 !important;
@@ -109,6 +110,18 @@
 .margin_zero{
   margin: 0
 }
+
+.back-to-top{
+  position: fixed;
+  bottom: 40px;
+  right: 30px;
+  width: 61px;
+  height: 61px;
+  background: url(../img/back_to_top.png);
+  display: none;
+  -webkit-backface-visibility: hidden;
+  z-index: 1000;
+}
 /*Work css*/
 
 .margin_top{
@@ -142,6 +155,109 @@
 }
 
 
+/*blog*/
+
+.blog_nav{
+  background-color: #f6f6f6;
+  width: 100%;
+  height: auto;
+  font-size: 13px;
+  font-size: 0.8125rem;
+  -webkit-transition: background-color, 0.5s;
+  -moz-transition: background-color, 0.5s;
+  transition: background-color, 0.5s;
+  min-height: 80px;
+  padding: 0;
+}
+
+/*services*/
+
+
+.svg-icon, .notifications .notification:before, .nav-toggle, .logo a, .projects-section .projects-list li .project-image, .home-projects-section .projects-list li .project-image {
+  display: inline-block;
+  vertical-align: baseline;
+  zoom: 1;
+  width: 200px;
+  height: 200px;
+}
+
+.mobile_shopping-icon {
+  background: url("../img/mobile_shopping.png") no-repeat top left;
+  background-image: url("../img/mobile_shopping_svg.svg"), none;
+  background-size: contain;
+}
+
+.products_migration-icon {
+  background: url("../img/products_migration.png") no-repeat top left;
+  background-image: url("../img/products_migration_svg.svg"), none;
+  background-size: contain;
+}
+
+.inventory_integration-icon {
+  background: url("../img/inventory_integration.png") no-repeat top left;
+  background-image: url("../img/inventory_integration_svg.svg"), none;
+  background-size: contain;
+}
+.spree-image {
+  display: block;
+  height: 270px;
+  background-image: url("../img/spree_partnership.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.services-webdesign-section {
+  color: white;
+  background-color: #013c50;
+  background-image: url("../img/web_design_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+.ui_ux-icon {
+  background: url("../img/ui_ux.png") no-repeat top;
+  background-image: url("../img/ui_ux_svg.svg"), none;
+  background-size: contain;
+}
+.rwd-icon {
+  background: url("../img/rwd.png") no-repeat top;
+  background-image: url("../img/rwd_svg.svg"),none;
+  background-size: contain;
+}
+.branding-icon {
+  background: url("../img/branding.png") no-repeat top;
+  background-image: url("../img/branding_svg.svg"),none;
+  background-size: contain;
+}
+.cms-icon {
+  background: url("../img/cms.png") no-repeat top left;
+  background-image: url("../img/cms_svg.svg"),none;
+}
+.maintenance-icon {
+  background: url("../img/maintenance.png") no-repeat top left;
+  background-image: url("../img/maintenance_svg.svg"),none;
+}
+.testing-icon {
+  background: url("../img/testing.png") no-repeat top left;
+  background-image: url("../img/testing_svg.svg"),none;
+}
+.ember-icon {
+  background: url("../img/ember.png") no-repeat top left;
+  background-image: url("../img/ember_svg.svg"),none;
+}
+
+.back_to_top{
+  position: fixed;
+  bottom: 40px;
+  right: 30px;
+  width: 61px;
+  height: 61px;
+  background: url(../img/back_to_top.png);
+  display: inline;
+  -webkit-backface-visibility: hidden;
+  z-index: 1000;
+
+}
+
 @media only screen and (max-width: 768px) {
   .nav_float{
     float:none !important;
@@ -162,19 +278,24 @@
     -moz-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
+  .text-align{
+    text-align: center;
+  }
+  .cms-icon {
+    background: url("../img/cms.png") no-repeat top;
+    background-image: url("../img/cms_svg.svg"),none;
+  }
+  .maintenance-icon {
+    background: url("../img/maintenance.png") no-repeat top ;
+    background-image: url("../img/maintenance_svg.svg"),none;
+  }
+  .testing-icon {
+    background: url("../img/testing.png") no-repeat top ;
+    background-image: url("../img/testing_svg.svg"),none;
+  }
+  .ember-icon {
+    background: url("../img/ember.png") no-repeat top ;
+    background-image: url("../img/ember_svg.svg"),none;
+  }
 }
 
-/*blog*/
-
-.blog_nav{
-  background-color: #f6f6f6;
-  width: 100%;
-  height: auto;
-  font-size: 13px;
-  font-size: 0.8125rem;
-  -webkit-transition: background-color, 0.5s;
-  -moz-transition: background-color, 0.5s;
-  transition: background-color, 0.5s;
-  min-height: 80px;
-  padding: 0;
-}
