--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,12 +1,12 @@
 <div>
-    <div class="row margin_zero" style="background: #f6f6f6">
+    <div class="row margin_zero">
         <div class="container sub-cont">
             <div class="text" style=" padding-bottom: 0">
                 <h2>About us</h2>
                 <p class="format">Nebulab is an Italian agency working with awesome clients from all over the world with transparency and flexibility. We bring together strategy, design and technology to create successful web solutions that help big and small companies to achieve their goals.</p>
             </div>
         </div>
-        <div class="row margin_zero">
+        <div class="row margin_zero" style="background: #f6f6f6">
             <div class="container sub-cont">
                 <div class="text" style="padding-bottom: 60px">
                     <h2>Our team</h2>
@@ -75,6 +75,7 @@
                 <hr>
             </div>
         </div>
+        <a class="back-to-top" href="" id="backToTop" ></a>
         <div class="row margin_zero">
             <div class="container sub-cont">
                 <div class="text">
