--- a/app/partials/blog.html
+++ b/app/partials/blog.html
@@ -60,6 +60,7 @@
         </div>
     </div>
 </div>
+<a class="back-to-top" href="" id="backToTop" ></a>
 <div class="row margin_zero">
     <div class="container sub-cont">
         <div class="text">
