--- a/app/partials/work.html
+++ b/app/partials/work.html
@@ -154,6 +154,7 @@
                 </div>
             </div>
         </div>
+    <a class="back-to-top" href="" id="backToTop" ></a>
     <div class="row margin_zero">
         <div class="container sub-cont">
             <div class="text">
