--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -130,12 +130,13 @@
             </div>
         </div>
     </div>
-    <div class="services-ror-section" id="ruby-on-rails">
-        <div class="container" style="  padding: 100px 20px 75px 20px; text-align: center;">
-            <div class="ror-image">
+    <div class="row margin_zero" style="  background: #0099cc;  color: white;">
+        <div class="container sub-cont" >
+            <div class="col-md-6 col-xs-12 col-sm-12" style="text-align: center;">
                 <span class="svg-icon ruby-icon"></span>
             </div>
-            <div class="ror-description"> <h2>Ruby on Rails Development</h2>
+            <div class="col-md-6 col-xs-12 col-sm-12 nav_float">
+                <h2>Ruby on Rails Development</h2>
                 <p>Most of our projects are built with Ruby on Rails.
                     We think it’s the best framework around when you need to build powerful web applications that will leave a mark.
                     Rails promotes great standards that make it possible for us to concentrate on what it’s valuable for our clients.</p>
@@ -143,52 +144,49 @@
         </div>
     </div>
     <a class="back-to-top" href="" id="backToTop" ></a>
-    <div class="services-marketing-section" id="online-marketing">
-        <div class="container" style="  padding: 100px 20px 75px 20px;">
-            <div class="header" style="text-align: center;">
+   <div class="row margin_zero" style="  background: #f6f6f6;">
+        <div class="container sub-cont">
+            <div class="text">
                 <h2>Online Marketing</h2>
                 <p class="format">The Internet is a crowded place, it is hard to gain visibility to promote and sell products or services online.
                     We can help you reach your potential customers and bring value to your brand through effective marketing campaigns.</p>
             </div>
-            <div class="ppc-marketing">
-                <div class="sub-image">
+            <div class="row">
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align">
                     <span class="svg-icon ppc-icon"></span>
                 </div>
-                <div class="sub-text">
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
                     <h4>PPC Campaigns</h4>
                     <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We build and manage strategic Pay-Per-Click campaigns on Google Adwords and Facebook Advertising.
                         We can promote your business using targeted keywords that help you to reach quickly the right target audience.</p>
                 </div>
-            </div>
-            <div class="seo-marketing">
-                <div class="sub-image">
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align" >
                     <span class="svg-icon seo-icon"></span>
                 </div>
-                <div class="sub-text">
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
                     <h4>SEO (Search Engine optimization)</h4>
                     <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We can improve the ranking of your online business on search engines by using the right tools and techniques.
                         We can optimize your website and build SEO campaigns to bring long-term benefits to your investment.</p>
                 </div>
             </div>
-            <div class="social-media-marketing">
-                <div class="sub-image">
+            <div class="row">
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align" >
                     <span class="svg-icon social_media-icon"></span>
                 </div>
-                <div class="sub-text"> <h4>Social Media</h4>
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
+                    <h4>Social Media</h4>
                     <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We can give more visibility to your brand on social networks, blogs and virtual communities through social media marketing campaigns.
                         This will help you build an online connection between you and your existing and potential customers.</p>
                 </div>
-            </div>
-            <div class="email-marketing">
-                <div class="sub-image">
+                <div class="col-md-2 col-xs-12 col-sm-12 text-align">
                     <span class="svg-icon email_marketing-icon"></span>
                 </div>
-                <div class="sub-text">
-                    <h3>Email Marketing</h3>
+                <div class="col-md-4 col-xs-12 col-sm-12 text-align" style="  padding-bottom: 40px;">
+                    <h4>Email Marketing</h4>
                     <p style="width: 100%;line-height: 7.35mm;font-size: 15px;">We can help you build a relationship with your customers by creating effective and customized email marketing campaigns.
                         By sending regular newsletters you can always keep your customers informed about your business' latest news, such as product updates and new content.</p>
                 </div>
             </div>
-        </div>
+         </div>
     </div>
 </div>
